--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ."
+    "start": "node bin/www"
   },
   "dependencies": {
     "@line/bot-sdk": "^6.6.0",
