--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "pg": "^7.8.2",
+    "query-string": "^6.4.2",
     "require-directory": "^2.1.1",
     "sequelize": "^5.1.0",
     "sequelize-cli": "^5.4.0"
